--- a/slider.sass
+++ b/slider.sass
@@ -96,7 +96,7 @@ input[type=range]
     &::-ms-thumb
       box-shadow: $slider-thumb-shadow
       border: $slider-thumb-border
-      background: $slider-thumb-background
+      background: darken( $slider-thumb-background, 10% )
       border-radius: $slider-thumb-radius
       cursor: pointer
       transition: transform .2s ease, -webkit-transform .2s ease
