--- a/slider.sass
+++ b/slider.sass
@@ -5,8 +5,11 @@ $slider-track-border: 0px solid $grey !default
 $slider-track-shadow: 0px 0px 0px $grey !default
 $slider-thumb-background: $primary !default
 $slider-thumb-radius: $radius !default
-$slider-thumb-border: 0px 0px 0px $grey !default
+$slider-thumb-border: 1px solid $white-ter !default
 $slider-thumb-shadow: none !default
+$slider-output-width: 3rem !default
+$slider-output-background: $grey-dark !default
+$slider-output-radius: $radius !default
 
 =slider-size($size)
   $track-height: $size / 2
@@ -19,7 +22,7 @@ $slider-thumb-shadow: none !default
       height: $track-height
     &::-ms-track
       height: $track-height
-  
+
   &[orient="vertical"]
     &::-webkit-slider-runnable-track
       width: $track-height
@@ -27,7 +30,7 @@ $slider-thumb-shadow: none !default
       width: $track-height
     &::-ms-track
       width: $track-height
-  
+
   &::-webkit-slider-thumb
     height: $thumb-size
     width: $thumb-size
@@ -38,7 +41,7 @@ $slider-thumb-shadow: none !default
   &::-ms-thumb
     height: $thumb-size
     width: $thumb-size
-  
+
 input[type=range]
   &.slider
     -webkit-appearance: none
@@ -52,7 +55,7 @@ input[type=range]
 
     &:focus
       outline: none
-    
+
     &:not([orient="vertical"])
       &::-webkit-slider-runnable-track
         width: 100%
@@ -60,6 +63,40 @@ input[type=range]
         width: 100%
       &::-ms-track
         width: 100%
+
+      &.has-output,
+      &.has-output-tooltip
+        + output
+          width: $slider-output-width
+          background: $slider-output-background
+          border-radius: $slider-output-radius
+          padding: .4rem .8rem
+          font-size: $size-7
+          line-height: $size-7
+          text-align: center
+          text-overflow: ellipsis
+          white-space: nowrap
+          color: $white
+          overflow: hidden
+          pointer-events: none
+          z-index: 200
+
+      &.has-output
+        display: inline-block
+        width: calc(100% - ( #{$slider-output-width + 1.3rem } ))
+        + output
+          display: inline-block
+          position: relative
+          margin-left: .85rem
+          top: -.6rem
+
+      &.has-output-tooltip
+        display: block
+        + output
+          position: absolute
+          left: 0
+          top: -.1rem
+
     &[orient="vertical"]
       -webkit-appearance: slider-vertical
       writing-mode: bt-lr
@@ -100,7 +137,7 @@ input[type=range]
       box-shadow: $slider-thumb-shadow
       border: $slider-thumb-border
       border-radius: $slider-thumb-radius
-      background: $slider-thumb-background
+      background: darken( $slider-thumb-background, 10% )
       cursor: pointer
       -webkit-appearance: none
       transition: transform .2s ease, -webkit-transform .2s ease
@@ -109,7 +146,7 @@ input[type=range]
     &::-moz-range-thumb
       box-shadow: $slider-thumb-shadow
       border: $slider-thumb-border
-      background: $slider-thumb-background
+      background: darken( $slider-thumb-background, 10% )
       border-radius: $slider-thumb-radius
       cursor: pointer
       transition: transform .2s ease, -webkit-transform .2s ease
@@ -178,3 +215,16 @@ input[type=range]
           background: $color !important
         &::-ms-fill-lower
           background: $color
+
+        &::-webkit-slider-thumb
+          background: darken( $color, 10% )
+        &::-moz-range-thumb
+          background: darken( $color, 10% )
+        &::-ms-thumb
+          background: darken( $color, 10% )
+
+        &.has-output,
+        .has-output-tooltip
+          + output
+            background-color: $color
+            color: $color-invert
