--- a/src/extension.sass
+++ b/src/extension.sass
@@ -16,7 +16,7 @@ $slider-output-radius: $radius !default
   $thumb-size: $size
 
   &:not([orient="vertical"])
-    min-height: ( $size * 1.25 + 2 )
+    min-height: calc(( #{$size} + 2px ) * 1.25)
     &::-webkit-slider-runnable-track
       height: $track-height
     &::-moz-range-track
