--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -50,7 +50,7 @@ input[type=range]
 		appearance: none
 		margin: 1rem 0
 		background: transparent
-		touch-action: none;
+		touch-action: none
 
 		&.is-fullwidth
 			display: block
