fix(sass): add missing sass import

--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -1,3 +1,5 @@
+@use "sass:math"
+
 $slider-radius: $radius !default
 $slider-track-background: $grey-lighter !default
 $slider-track-radius: $radius !default
