--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -1,5 +1,5 @@
 @use "sass:math"
-@import "node_modules/bulma/sass/utilities"
+@import 'bulma/sass/utilities'
 
 $slider-radius: $radius !default
 $slider-track-background: $grey-lighter !default
